tests/snapshots/integration__integration_tests__list__git_error_warning.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m   [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m             [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ main         [2m^[22m                         .                         [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ feature      [33m✗[39m                         ../repo.feature           [2m00000000[0m  [2m55y[0m   [2m

⚪ [2mShowing 2 worktrees
🟡 [33mSome git operations failed:
[107m [0m  [1mfeature[22m: commit-details (fatal: bad object 0000000000000000000000000000000000000000)
[107m [0m  [1mfeature[22m: ahead-behind (fatal: Invalid symmetric difference expression main...0000000000000000000000000000000000000000)
[107m [0m  [1mfeature[22m: committed-trees-match (fatal: ambiguous argument '0000000000000000000000000000000000000000^{tree}': unknown revision or path not in the
[107m [0m  working tree.)
[107m [0m  [1mfeature[22m: has-file-changes (fatal: Invalid symmetric difference expression main...feature)
[107m [0m  [1mfeature[22m: working-tree-diff (fatal: bad object HEAD)
[39m
