tests/snapshots/integration__integration_tests__list__json_tree_matches_main_after_merge.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "branch": "main",
    "path": "[REPO]",
    "kind": "worktree",
    "commit": {
      "sha": "33c3e5aa9f928d3eab87da8cbcd187e2ab921064",
      "short_sha": "33c3e5a",
      "message": "Same content on main",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "is_main",
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": true,
    "is_current": true,
    "statusline": "main  /u001b[2m^/u001b[22m",
    "symbols": "^"
  },
  {
    "branch": "feature-merged",
    "path": "[REPO].feature-merged",
    "kind": "worktree",
    "commit": {
      "sha": "ee45656141f6f30e6e036767adf380b3ccc639d7",
      "short_sha": "ee45656",
      "message": "Merge main into feature",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "integrated",
    "integration_reason": "no-added-changes",
    "main": {
      "ahead": 2,
      "behind": 0
    },
    "worktree": {
      "detached": false,
      "bare": false
    },
    "is_main": false,
    "statusline": "feature-merged  /u001b[2m⊂/u001b[22m  /u001b[32m↑2/u001b[0m",
    "symbols": "⊂"
  }
]

----- stderr -----
