tests/snapshots/integration__integration_tests__list__json_with_user_marker.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "branch": "main",
    "path": "[REPO]",
    "kind": "worktree",
    "commit": {
      "sha": "a058e792cfd4836c913fdbc0d4559af34b352b07",
      "short_sha": "a058e79",
      "message": "Initial commit",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "is_main",
    "worktree": {
      "detached": false
    },
    "is_main": true,
    "is_current": true,
    "is_previous": false,
    "statusline": "main  /u001b[2m^/u001b[22m",
    "symbols": "^"
  },
  {
    "branch": "with-status",
    "path": "[REPO].with-status",
    "kind": "worktree",
    "commit": {
      "sha": "a058e792cfd4836c913fdbc0d4559af34b352b07",
      "short_sha": "a058e79",
      "message": "Initial commit",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "empty",
    "main": {
      "ahead": 0,
      "behind": 0
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "with-status  /u001b[2m_/u001b[22m🔧",
    "symbols": "_🔧"
  },
  {
    "branch": "without-status",
    "path": "[REPO].without-status",
    "kind": "worktree",
    "commit": {
      "sha": "a058e792cfd4836c913fdbc0d4559af34b352b07",
      "short_sha": "a058e79",
      "message": "Initial commit",
      "timestamp": 0
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      },
      "diff_vs_main": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "empty",
    "main": {
      "ahead": 0,
      "behind": 0
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "without-status  /u001b[2m_/u001b[22m",
    "symbols": "_"
  }
]

----- stderr -----
